tests/ffi/should_compile/T1357.hs
{-# LANGUAGE ForeignFunctionInterface #-}
module T where

import Foreign
foreign import ccall "f" f :: FunPtr (Int -> IO ())
